Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8, 12.2(EOL)
-
Can result in hang or crash
-
Item_name_const forwarded type_handler() to the wrapped value but not decimal_precision(), so a hex literal wrapped in NAME_CONST reported the generic precision instead of its own, forward decimal_precision() too
Description
SELECT ROUND(NAME_CONST('x', 0x0123456789ABCDEF0123456789ABCDEF0123456789AB)); |
|
10.11 536cd151f0370216d9ba4c15f40c7037060972a5 |
mariadbd: /data/bld/10.11-asan-ubsan/sql/item_func.cc:2663: void Item_func_round::fix_arg_hex_hybrid(): Assertion `args[0]->decimal_precision() < 22' failed.
|
251110 22:37:01 [ERROR] /share8t/bld/10.11-asan-ubsan/sql/mariadbd got signal 6 ;
|
 |
#10 0x00007fae90053eb2 in __GI___assert_fail (assertion=0x55f0c7ed1300 "args[0]->decimal_precision() < 22", file=0x55f0c7ec8660 "/data/bld/10.11-asan-ubsan/sql/item_func.cc", line=2663, function=0x55f0c7ed1240 "void Item_func_round::fix_arg_hex_hybrid()") at ./assert/assert.c:101
|
#11 0x000055f0c57f9063 in Item_func_round::fix_arg_hex_hybrid (this=this@entry=0x62d00005b070) at /data/bld/10.11-asan-ubsan/sql/item_func.cc:2663
|
#12 0x000055f0c4d2e30f in Type_handler_hex_hybrid::Item_func_round_fix_length_and_dec (this=<optimized out>, item=0x62d00005b070) at /data/bld/10.11-asan-ubsan/sql/sql_type.cc:6523
|
#13 0x000055f0c5830148 in Item_func_round::fix_length_and_dec (this=0x62d00005b070, thd=<optimized out>) at /data/bld/10.11-asan-ubsan/sql/item_func.h:2204
|
#14 0x000055f0c57c3536 in Item_func::fix_fields (this=0x62d00005b070, thd=<optimized out>, ref=<optimized out>) at /data/bld/10.11-asan-ubsan/sql/item_func.cc:412
|
#15 0x000055f0c3bd6e1e in Item::fix_fields_if_needed (this=this@entry=0x62d00005b070, thd=thd@entry=0x62c0000b0218, ref=ref@entry=0x62d00005b138) at /data/bld/10.11-asan-ubsan/sql/item.h:817
|
#16 0x000055f0c3bd6f57 in Item::fix_fields_if_needed_for_scalar (this=this@entry=0x62d00005b070, thd=thd@entry=0x62c0000b0218, ref=ref@entry=0x62d00005b138) at /data/bld/10.11-asan-ubsan/sql/item.h:1193
|
#17 0x000055f0c3e2e498 in setup_fields (thd=0x62c0000b0218, ref_pointer_array=..., fields=..., column_usage=column_usage@entry=MARK_COLUMNS_READ, sum_func_list=sum_func_list@entry=0x62d00005bef0, pre_fix=<optimized out>, allow_sum_func=<optimized out>, where=<optimized out>) at /data/bld/10.11-asan-ubsan/sql/sql_base.cc:8218
|
#18 0x000055f0c43fb06d in JOIN::prepare (this=this@entry=0x62d00005bb50, tables_init=tables_init@entry=0x0, conds_init=conds_init@entry=0x0, og_num=og_num@entry=0, order_init=order_init@entry=0x0, skip_order_by=skip_order_by@entry=false, group_init=<optimized out>, having_init=<optimized out>, proc_param_init=<optimized out>, select_lex_arg=<optimized out>, unit_arg=<optimized out>) at /data/bld/10.11-asan-ubsan/sql/sql_select.cc:1556
|
#19 0x000055f0c44a60a0 in mysql_select (thd=thd@entry=0x62c0000b0218, tables=<optimized out>, fields=..., conds=conds@entry=0x0, og_num=og_num@entry=0, order=order@entry=0x0, group=<optimized out>, having=<optimized out>, proc_param=<optimized out>, select_options=2164525824, result=<optimized out>, unit=<optimized out>, select_lex=<optimized out>) at /data/bld/10.11-asan-ubsan/sql/sql_select.cc:5260
|
#20 0x000055f0c44a776f in handle_select (thd=thd@entry=0x62c0000b0218, lex=lex@entry=0x62c0000b4610, result=result@entry=0x62d00005bb20, setup_tables_done_option=setup_tables_done_option@entry=0) at /data/bld/10.11-asan-ubsan/sql/sql_select.cc:601
|
#21 0x000055f0c4138e53 in execute_sqlcom_select (thd=thd@entry=0x62c0000b0218, all_tables=<optimized out>) at /data/bld/10.11-asan-ubsan/sql/sql_parse.cc:6464
|
#22 0x000055f0c417c39f in mysql_execute_command (thd=thd@entry=0x62c0000b0218, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /data/bld/10.11-asan-ubsan/sql/sql_parse.cc:4023
|
#23 0x000055f0c419f217 in mysql_parse (thd=thd@entry=0x62c0000b0218, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x7fae85f5fab0) at /data/bld/10.11-asan-ubsan/sql/sql_parse.cc:8219
|
#24 0x000055f0c41a8597 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x62c0000b0218, packet=packet@entry=0x62900024e219 "SELECT ROUND(NAME_CONST('x', 0x0123456789ABCDEF0123456789ABCDEF0123456789AB))", packet_length=packet_length@entry=77, blocking=blocking@entry=true) at /data/bld/10.11-asan-ubsan/sql/sql_parse.cc:1921
|
#25 0x000055f0c41b51d3 in do_command (thd=thd@entry=0x62c0000b0218, blocking=blocking@entry=true) at /data/bld/10.11-asan-ubsan/sql/sql_parse.cc:1434
|
#26 0x000055f0c49ae51c in do_handle_one_connection (connect=<optimized out>, connect@entry=0x6080000039b8, put_in_cache=put_in_cache@entry=true) at /data/bld/10.11-asan-ubsan/sql/sql_connect.cc:1475
|
#27 0x000055f0c49af679 in handle_one_connection (arg=0x6080000039b8) at /data/bld/10.11-asan-ubsan/sql/sql_connect.cc:1387
|
#28 0x000055f0c632e295 in pfs_spawn_thread (arg=0x617000005b98) at /data/bld/10.11-asan-ubsan/storage/perfschema/pfs.cc:2201
|
#29 0x00007fae900a81c4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
|
#30 0x00007fae9012885c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
|
No obvious problem on a non-debug build.
Attachments
Issue Links
- relates to
-
MDEV-39380 MariaDB debug build assertion `arg2_int >= 0' failed in Item_func_additive_op::result_precision
-
- Closed
-