sql/item.h
@@ -3510,6 +3510,10 @@ public:
   {
     return value_item->type_handler();
   }
+  decimal_digits_t decimal_precision() const override
+  {
+    return value_item->decimal_precision();
+  }
 
   bool const_item() const override { return true; }
 
